--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
 import '@fontsource-variable/nunito-sans';
 import ChatWidget from '../components/ChatWidget';
-const { title = 'Âm vang Điện Biên', description = '' } = Astro.props;
+const { title = 'HCM202 - Tư tưởng Hồ Chi Minh', description = '' } = Astro.props;
 ---
 
 <html lang="vi" class="min-h-full">
